--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,15 @@ body {
 }
 
 h1 {
-  margin-top: 60px;
+  display: block;
+  position: relative;
+  top: 100px;
   letter-spacing: 5px;
+  color: #fff;
+  font-size: 5rem;
+}
+.welcome {
+  text-transform: capitalize;
 }
 a {
 transition: all 0.4s ease;
@@ -17,11 +24,80 @@ transition: all 0.4s ease;
   background-color: #ccc !important;
   color: #000 !important;
 }
-
+.navbar-inverse {
+  margin-bottom: 0;
+}
 .form-group {
+  position: relative;
   width: 30%;
   margin: auto;
+  color: #fff;
 }
 .btn-default {
   margin-top: 20px;
+}
+#cover {
+  background: linear-gradient(rgba(20, 20, 20, 0.7), rgba(20, 20, 20, 0.7)), url("../images/cover.jpg") no-repeat center center;
+  background-size: cover;
+  height: 600px;
+}
+
+#about {
+  background: linear-gradient(rgba(20, 20, 20, 0.7), rgba(20, 20, 20, 0.7)), url("../images/about-cover.jpg") no-repeat center center;
+  background-size: cover;
+  height: 600px;
+}
+
+#contactus {
+  background-color: #34495e;
+  height: 600px;
+}
+
+
+
+.contact-title {
+  margin: 0;
+}
+form {
+  position: relative;
+  top: 151px;
+}
+
+#info-cover {
+  background-color: #2980b9;
+  color: #fff;
+  height: 600px;
+}
+
+#info-cover h1 {
+  top: 100px;
+}
+#info-cover p {
+  position: relative;
+  clear: both;
+  top: 120px;
+}
+
+#celebrity {
+  color: #ddd;
+  background: linear-gradient(rgba(20, 20, 20, 0.6), rgba(20, 20, 20, 0.6)), url('/images/celebrity.jpg') no-repeat center center;
+  background-size: cover;
+  height:100vh;
+  padding: 60px 0;
+  text-align: left;
+}
+#celebrity h2 {
+  position: relative;
+  top: 100px;
+  font-size: 6rem;
+}
+#celebrity p {
+  position: relative;
+  top: 130px;
+}
+
+.info {
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 3px;
 }
