--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,7 @@
-<h1>A little bit more <b>about</b> our Work</h1>
+<section id="about">
+  <div class="container">
+    <h1>A little bit more <b>about</b> my Work</h1>
+
+  </div>
+
+</section>
