--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -1,20 +1,23 @@
-<h1>Let's get in <b>Contact</b></h1>
+<section id="contactus">
 
-<div class="wrapper">
-  <form action="/display-user-info" method="get">
-    <div class="form-group">
-      <label for="name-input">Your Name</label>
-      <input type="text" class="form-control" id="name-input" placeholder="Jonh" name="name">
-    </div>
-    <div class="form-group">
-      <label for="lastName-input">Last Name</label>
-      <input type="text" class="form-control" id="lastName-input" placeholder="Smith" name="lastName">
-    </div>
-    <div class="form-group">
-      <label for="email-input">Your Email</label>
-      <input type="email" class="form-control" id="email-input" placeholder="jonhsmith@smith.com" name="email">
-    </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-  </form>
+ <div class="container">
 
-</div>
+   <h1 class="contact-title">Let's get in <b>Touch</b></h1>
+
+   <form action="/display-user-info" method="get">
+     <div class="form-group">
+       <label for="name-input">Your Name</label>
+       <input type="text" class="form-control" id="name-input" placeholder="Jonh" name="name">
+     </div>
+     <div class="form-group">
+       <label for="lastName-input">Last Name</label>
+       <input type="text" class="form-control" id="lastName-input" placeholder="Smith" name="lastName">
+     </div>
+     <div class="form-group">
+       <label for="email-input">Your Email</label>
+       <input type="email" class="form-control" id="email-input" placeholder="jonhsmith@smith.com" name="email">
+     </div>
+     <button type="submit" class="btn btn-default">Submit</button>
+   </form>
+ </div>
+</section>
