--- a/views/display-info.ejs
+++ b/views/display-info.ejs
@@ -1,6 +1,8 @@
-<h1><b>Thanks</b> <%=name %> <%= lastName %> </h1>
+<section id="info-cover">
+  <div class="container">
 
-<p class="lead">You should received a welcome email to <%= email %> shortly</p>
+    <h1><b>Thanks</b> <%=name %> <%= lastName %> </h1>
 
-
-<img src="/images/giphy.gif">
+    <p class="lead">You should received a welcome email to <%= email %> shortly</p>
+  </div>
+</section>
