--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,6 @@
+<section id="cover">
+  <div class="container">
+    <h1 class="welcome">Hi! I'am <b>Marlon</b></h1>
 
-<h1>Welcome to my <b>home</b> page</h1>
+  </div>
+</section>
