--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -17,19 +17,16 @@
           <a class="navbar-brand" href="#">myApp</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/home">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
+          <li><a href="/celebrity">Celebrity Profile</a></li>
           <li><a href="/contactus">Contact Us</a></li>
         </ul>
       </div> <!-- container -->
     </nav>
 
-
-    <div class="container">
-
       <%- body -%>
 
-    </div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
